# h264-codec

./: .gitignore  README.md
box/: Vagrantfile
project/: CMakeLists.txt
project/src/: main.cpp
